<resources>
    <string name="app_name">Sellr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="cancel">Cancel</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="item_name">Item Name</string>
    <string name="choose_a_category">Choose a Category</string>
    <string name="used">Used</string>
    <string name="newChip">new</string>
    <string name="item_condition">Item Condition</string>
    <string name="please_choose_item_condition">Please choose item condition</string>
    <string name="price">Price</string>
    <string name="upload_image">Upload image</string>
    <string name="list_it">List it!</string>
    <string name="please_upload_images">Please upload at least one image</string>
    <string name="used_for_time">Used for time</string>
    <string name="object_name">Object Name</string>
    <string name="object_location">Object Location</string>
    <string name="contact_number">Contact Number</string>
    <string name="select_one_please">Select One</string>
    <string name="please_select_one">Please Select One</string>
    <string name="LOST">LOST</string>
    <string name="FOUND">FOUND</string>
    <string name="object_image">object_image</string>
    <string name="item_image">item image</string>
    <string name="object">Object</string>
    <string name="location_of_lost_or_found">Location of Lost or Found</string>
    <string name="contact">contact</string>
    <string name="indicator_lost">indicator lost</string>
    <string name="indicator_found">indicator found</string>
    <string name="object_description">Object Description</string>
    <string name="lostandfoundposter">lostandfoundposter</string>
    <string-array name="Categories">
        <item>Books</item>
        <item>Electronics</item>
        <item>Clothes</item>
        <item>Vehicles</item>
        <item>Others</item>
    </string-array>
    <string-array name="Conditions">
        <item>Less than a week</item>
        <item>Less than a month</item>
        <item>Between 1-3 months</item>
        <item>Between 3-6 months</item>
        <item>Between 6-9 months</item>
        <item>Almost an year</item>
        <item>Almost two years</item>
        <item>More than two years</item>
    </string-array>
</resources>