<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="2dp">

            <ImageView
                android:contentDescription="@string/item_image"
                android:id="@+id/lostandfoundObjectimage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lostandfoundObjectimage"
                app:layout_constraintEnd_toEndOf="@id/linearLayoutIndicators"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.038">






                <TextView
                    android:id="@+id/lostandfoundObject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/object"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/lostandfoundLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/location_of_lost_or_found"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:id="@+id/Postedby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Posted by:"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
                    <TextView
                        android:id="@+id/lostandfoundPosterUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/lostandfoundposter"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/Postedby"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:id="@+id/linearLayoutIndicators"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/indicator_red"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/indicator_lost"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/red_pin" />

                <ImageView
                    android:contentDescription="@string/indicator_found"
                    android:id="@+id/indicator_green"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.028"
                    app:srcCompat="@drawable/pin" />
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>